--- a/css/style.css
+++ b/css/style.css
@@ -632,6 +632,12 @@ body {
     border: 2px solid #ffffff;
     background-color: #0055a7;
     color: #ffffff; }
+    .btn__tertiary--1 {
+      padding: 10px 50px;
+      border-radius: 40px;
+      border: 2px solid #0055a7;
+      background-color: #ffffff;
+      color: #0055a7; }
   .btn__form {
     padding: 10px 70px;
     border-radius: 40px;
@@ -1071,9 +1077,31 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center; }
+    .card__terms .card__footer .btn:first-child {
+      margin-right: 10px; }
 
 @media screen and (max-width: 1024px) {
+  .card__terms .card__body {
+    padding: 25px; }
   .card__terms .card__footer {
-    flex-direction: column; }
+    flex-direction: row;
+    justify-content: space-between; }
+    .card__terms .card__footer .card__download {
+      margin-bottom: 40px; }
+    .card__terms .card__footer .card__buttons .btn:first-child {
+      margin-right: 15px; }
     .card__terms .card__footer .btn {
       padding: 10px 20px; } }
+
+@media screen and (max-width: 576px) {
+  .card__terms .card__header {
+    flex-direction: column;
+    justify-content: center; }
+  .card__terms .card__body {
+    padding: 20px; }
+  .card__terms .card__footer {
+    flex-direction: column;
+    padding: 20px; }
+    .card__terms .card__footer .card__buttons {
+      display: flex;
+      justify-content: space-between; } }
