--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -32,6 +32,13 @@
         border: 2px solid $color-white;
         background-color: $color-primary;
         color: $color-white;
+        &--1 {
+            padding: 10px 50px;
+            border-radius: 40px;
+            border: 2px solid $color-primary;
+            background-color: $color-white;
+            color: $color-primary;
+        }
     }
 
     &__form {
