--- a/scss/pages/_terms.scss
+++ b/scss/pages/_terms.scss
@@ -17,6 +17,9 @@
         }
         &__body {
             padding: 50px;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            max-height: 70vh;
         }
         &__title {
             margin-bottom: 0;
