--- a/scss/components/_mobilemenu.scss
+++ b/scss/components/_mobilemenu.scss
@@ -1,23 +1,99 @@
-.menu__btn {
-    &.close {
-        .btn__line {
-            &:nth-child(1) {
-                transform: rotate(45deg);
-            }
-            &:nth-child(2) {
-                display: none;
-            }
-            &:nth-child(3) {
-                transform: rotate(-45deg);
+.mobile__menu {
+    &-bg {
+        height: 30px;
+        width: 30px;
+        border-radius: 50%;
+        position: fixed;
+        top: 35px;
+        right: 35px;
+        z-index: 1000;
+        background-color: $color-primary;
+        transition: all 0.35s ease-in;
+        opacity: 0;
+        &.show {
+            transform: scale(80);
+            opacity: 1;
+        }
+    }
+    &-list {
+        position: absolute;
+        z-index: 2000;
+        display: none;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 100vh;
+        transition: display 0.5s ease-in;
+        transition-property: display;
+        transition-delay: 5s;
+        &.show {
+            display: flex;
+            .mobile__menu-link {
+                transform: translateX(0);
             }
         }
     }
+    &-item {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+    &-link {
+        z-index: 2000;
+        transform: translateX(-50%);
+        transition: transform 0.35s ease-in-out;
+    }
+    &-btn {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        height: 50px;
+        width: 50px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 2000;
+        // background-color: $color-white;
+        &.close {
+            .btn__line {
+                transform: translateX(-50px);
+                background-color: transparent;
 
-    .btn__line {
-        width: 28px;
-        height: 3px;
-        margin: 0 0 5px 0;
-        background-color: $color-primary;
-        @include easeOut;
+                &::before {
+                    transform: rotate(45deg) translate(35px, -35px);
+                    background-color: $color-white;
+                }
+
+                &::after {
+                    transform: rotate(-45deg) translate(35px, 35px);
+                    background-color: $color-white;
+                }
+            }
+        }
+
+        .btn__line {
+            &,
+            &::before,
+            &::after {
+                width: 50px;
+                height: 5px;
+                border-radius: 5px;
+                background-color: $color-primary;
+                transition: all 0.5s ease-out;
+            }
+            &::before,
+            &::after {
+                content: "";
+                position: absolute;
+            }
+            &::before {
+                transform: translateY(-10px);
+            }
+            &::after {
+                transform: translateY(10px);
+            }
+        }
     }
 }
