--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -31,18 +31,22 @@
         display: flex;
         align-items: flex-end;
     }
-    &__mobile {
-        &-icon {
-            display: none;
+    .mobile {
+        &__menu {
+            &-btn {
+                display: none;
+            }
         }
     }
 }
 
 @media screen and (max-width: 1024px) {
     .header {
-        &__mobile {
-            &-icon {
-                display: block;
+        .mobile {
+            &__menu {
+                &-btn {
+                    display: flex;
+                }
             }
         }
 
