--- a/css/style.css
+++ b/css/style.css
@@ -697,12 +697,11 @@ body {
   display: none;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
   width: 100%;
-  height: 100vh;
   transition: display 0.5s ease-in;
   transition-property: display;
-  transition-delay: 5s; }
+  transition-delay: 5s;
+  margin-top: 60px; }
   .mobile__menu-list.show {
     display: flex; }
     .mobile__menu-list.show .mobile__menu-link {
