--- a/scss/components/_mobilemenu.scss
+++ b/scss/components/_mobilemenu.scss
@@ -21,12 +21,11 @@
         display: none;
         justify-content: center;
         flex-direction: column;
-        align-items: center;
         width: 100%;
-        height: 100vh;
         transition: display 0.5s ease-in;
         transition-property: display;
         transition-delay: 5s;
+        margin-top: 60px;
         &.show {
             display: flex;
             .mobile__menu-link {
@@ -55,7 +54,6 @@
         align-items: center;
         justify-content: center;
         z-index: 2000;
-        // background-color: $color-white;
         &.close {
             .btn__line {
                 transform: translateX(-50px);
