--- a/css/style.css
+++ b/css/style.css
@@ -778,7 +778,14 @@ body {
 @media screen and (max-width: 576px) {
   .card {
     flex-direction: column;
-    height: auto; }
+    height: auto;
+    margin-bottom: 30px; }
+    .card__title {
+      margin-bottom: 10px; }
+      .card__title .heading__tertiary {
+        text-align: center; }
+    .card.reverse {
+      flex-direction: column-reverse; }
     .card__content {
       padding: 30px; }
     .card__form {
