--- a/scss/components/_mobilemenu.scss
+++ b/scss/components/_mobilemenu.scss
@@ -16,20 +16,18 @@
         }
     }
     &-list {
-        position: absolute;
+        position: fixed;
         z-index: 2000;
-        display: none;
+        display: flex;
+        opacity: 0;
         justify-content: center;
         flex-direction: column;
         width: 100%;
-        transition: display 0.5s ease;
-        transition-delay: 5s;
+        transition: opacity 0.2s ease;
+        transition-delay: 0.3s;
         margin-top: 60px;
         &.show {
-            display: flex;
-            .mobile__menu-link {
-                transform: translateX(0);
-            }
+            opacity: 1;
         }
     }
     &-item {
@@ -40,11 +38,10 @@
     }
     &-link {
         z-index: 2000;
-        transform: translateX(-50%);
-        transition: transform 0.35s ease-in-out;
+        display: flex;
     }
     &-btn {
-        position: absolute;
+        position: fixed;
         top: 30px;
         right: 30px;
         height: 50px;
