--- a/scss/components/_mobilemenu.scss
+++ b/scss/components/_mobilemenu.scss
@@ -41,7 +41,7 @@
         display: flex;
     }
     &-btn {
-        position: fixed;
+        position: absolute;
         top: 30px;
         right: 30px;
         height: 50px;
@@ -51,6 +51,7 @@
         justify-content: center;
         z-index: 2000;
         &.close {
+            position: fixed;
             .btn__line {
                 transform: translateX(-50px);
                 background-color: transparent;
