Reduces height of the terms of service card

--- a/scss/pages/_terms.scss
+++ b/scss/pages/_terms.scss
@@ -19,7 +19,7 @@
             padding: 50px;
             overflow-y: scroll;
             overflow-x: hidden;
-            max-height: 70vh;
+            height: 40vh;
         }
         &__title {
             margin-bottom: 0;
