--- a/css/style.css
+++ b/css/style.css
@@ -1142,7 +1142,7 @@ body {
     padding: 50px;
     overflow-y: scroll;
     overflow-x: hidden;
-    max-height: 70vh; }
+    height: 40vh; }
   .card__terms .card__title {
     margin-bottom: 0; }
     .card__terms .card__title .heading__secondary {
