--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,8 @@ body {
   src: url("../assets/fonts/rubik-v10-latin-regular.eot");
   /* IE9 Compat Modes */
   src: local(""), url("../assets/fonts/rubik-v10-latin-regular.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/rubik-v10-latin-regular.woff2") format("woff2"), url("../assets/fonts/rubik-v10-latin-regular.woff") format("woff"), url("../assets/fonts/rubik-v10-latin-regular.ttf") format("truetype"), url("../assets/fonts/rubik-v10-latin-regular.svg#Rubik") format("svg");
-  /* Legacy iOS */ }
+  /* Legacy iOS */
+  font-display: swap; }
 
 /* roboto-regular - latin */
 @font-face {
@@ -435,7 +436,8 @@ body {
   src: url("../assets/fonts/roboto-v20-latin-regular.eot");
   /* IE9 Compat Modes */
   src: local("Roboto"), local("Roboto-Regular"), url("../assets/fonts/roboto-v20-latin-regular.eot?#iefix") format("embedded-opentype"), url("../assets/fonts/roboto-v20-latin-regular.woff2") format("woff2"), url("../assets/fonts/roboto-v20-latin-regular.woff") format("woff"), url("../assets/fonts/roboto-v20-latin-regular.ttf") format("truetype"), url("../assets/fonts/roboto-v20-latin-regular.svg#Roboto") format("svg");
-  /* Legacy iOS */ }
+  /* Legacy iOS */
+  font-display: swap; }
 
 .menu__link {
   text-decoration: none;
