--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -37,7 +37,7 @@
     }
 
     &-bg {
-        background-color: rgba($color-bg, 0.7);
+        background-color: rgba($color-white, 0.7);
         height: 50px;
         width: 90%;
     }
