--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./components/mobilemenu";
 @import "./components/card";
 @import "./components/form";
+@import "./components/multistep-form";
 @import "./layout/header";
 @import "./layout/general";
 @import "./layout/footer";
