--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -47,5 +47,8 @@
         background-color: $color-primary;
         color: $color-white;
         border: none;
+        &--1 {
+            padding: 10px 30px;
+        }
     }
 }
