--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -5,6 +5,23 @@
         margin-bottom: 20px;
         background-color: $color-gray-light;
         padding: 10px 15px;
+
+        &--1 {
+            display: flex;
+            background-color: $color-gray-light;
+            padding: 10px 15px;
+            margin-bottom: 20px;
+            align-items: center;
+        }
+        &--2 {
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+        }
+
+        &-sm {
+            margin-bottom: 0px;
+        }
     }
 
     &__input {
@@ -15,6 +32,25 @@
         font-size: 16px;
         font-weight: 500;
         width: 300px;
+
+        &-select {
+            border: none;
+            background-color: $color-gray-light;
+            font-family: "Rubik";
+            font-size: 16px;
+            font-weight: 500;
+            padding: 10px;
+            max-width: 120px;
+        }
+        &-checkbox {
+            height: 20px;
+            width: 20px;
+            border: 1px solid $color-text;
+            margin-right: 10px;
+        }
+    }
+
+    &__input-mobile {
     }
 }
 @media screen and (max-width: 1024px) {
