--- a/scss/pages/_signin.scss
+++ b/scss/pages/_signin.scss
@@ -5,6 +5,16 @@
         position: relative;
         display: flex;
         flex-direction: column;
+        &-blackout {
+            position: absolute;
+            top: 0;
+            right: 0;
+            height: 100%;
+            width: 100%;
+            background-color: rgba($color-black, 0.65);
+            z-index: 1010;
+            display: none;
+        }
 
         .background {
             &__top {
