--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -74,6 +74,7 @@
         }
         &.reverse {
             flex-direction: column-reverse;
+            width: 90vw;
         }
 
         &__content {
