--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -5,7 +5,7 @@
         margin-bottom: 20px;
         background-color: $color-gray-light;
         padding: 10px 15px;
-
+        width: 370px;
         &--1 {
             display: flex;
             background-color: $color-gray-light;
@@ -17,6 +17,7 @@
             margin-bottom: 15px;
             display: flex;
             align-items: center;
+            width: 370px;
         }
 
         &-sm {
@@ -33,6 +34,9 @@
         font-weight: 500;
         width: 300px;
 
+        &--1 {
+            width: 230px;
+        }
         &-select {
             border: none;
             background-color: $color-gray-light;
@@ -55,8 +59,19 @@
 }
 @media screen and (max-width: 1024px) {
     .form {
+        &__group {
+            width: 270px;
+
+            &--2 {
+                width: 270px;
+            }
+        }
         &__input {
             width: 200px;
+
+            &--1 {
+                width: 130px;
+            }
         }
     }
 }
@@ -65,6 +80,10 @@
         &__input {
             width: 150px;
             padding: 5px;
+
+            &--1 {
+                width: 120px;
+            }
         }
     }
 }
