Adds show password functionality

--- a/css/style.css
+++ b/css/style.css
@@ -863,6 +863,8 @@ body {
     width: 370px; }
   .form__group-sm {
     margin-bottom: 0px; }
+  .form__group .show__password {
+    cursor: pointer; }
 
 .form__input {
   padding: 7.5px;
