--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -23,6 +23,8 @@
 
         &-sm {
             margin-bottom: 0px;
+            display: flex;
+            justify-content: space-between;
         }
 
         .show__password {
