--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -100,6 +100,9 @@
                     height: 30px;
                 }
             }
+            .card__footer {
+                flex-direction: row;
+            }
         }
     }
 }
