--- a/css/style.css
+++ b/css/style.css
@@ -824,7 +824,7 @@ body {
     margin-bottom: 30px;
     width: 90vw; }
     .card__title {
-      margin-bottom: 10px; }
+      margin-bottom: 24px; }
       .card__title .heading__tertiary {
         text-align: center; }
     .card.reverse {
@@ -845,7 +845,8 @@ body {
     .modal .card__terms.container .near__invisible-bg {
       height: 35px; }
     .modal .card__terms.container .card__footer {
-      flex-direction: row; }
+      flex-direction: row;
+      margin: 10px 0; }
     .modal .card__terms.container .card__logo {
       margin-right: 0; }
     .modal .card__terms.container .card__download {
