--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -54,6 +54,9 @@
                 &__body {
                     padding: 20px;
                 }
+                &__footer {
+                    display: block;
+                }
             }
         }
     }
