--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -56,6 +56,13 @@
         transform: translateX(-50%);
     }
 }
+.flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
 @media screen and (max-width: 1024px) {
     .next__line {
         display: inline;
