--- a/css/style.css
+++ b/css/style.css
@@ -633,6 +633,12 @@ body {
   align-items: center;
   width: 100%; }
 
+.hr {
+  border: 0;
+  height: 1px;
+  background: #333;
+  background-image: linear-gradient(to right, #ccc, #333, #ccc); }
+
 @media screen and (max-width: 1024px) {
   .next__line {
     display: inline; } }
