--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -19,6 +19,7 @@
             display: flex;
             align-items: center;
             width: 370px;
+            padding: 10px 15px;
         }
 
         &-sm {
