--- a/css/style.css
+++ b/css/style.css
@@ -832,6 +832,10 @@ body {
     .modal .card__terms .card__footer {
       display: block; }
 
+@media screen and (max-width: 768px) {
+  .card__form {
+    padding: 30px 20px; } }
+
 @media screen and (max-width: 576px) {
   .card {
     flex-direction: column;
@@ -884,7 +888,8 @@ body {
     margin-bottom: 15px;
     display: flex;
     align-items: center;
-    width: 370px; }
+    width: 370px;
+    padding: 10px 15px; }
   .form__group-sm {
     margin-bottom: 0px;
     display: flex;
