Adds remember me and show password to login page

--- a/css/style.css
+++ b/css/style.css
@@ -632,6 +632,9 @@ body {
   justify-content: space-between;
   align-items: center;
   width: 100%; }
+  .flex--1 {
+    display: flex;
+    justify-content: space-between; }
 
 .hr {
   border: 0;
