Adds custom checkbox

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./components/card";
 @import "./components/form";
 @import "./components/multistep-form";
+@import "./components/customCheckbox";
 @import "./layout/header";
 @import "./layout/general";
 @import "./layout/footer";
