--- a/css/style.css
+++ b/css/style.css
@@ -900,6 +900,9 @@ body {
   .form__group .show__password {
     cursor: pointer; }
 
+.form__label {
+  margin-right: 2px; }
+
 .form__input {
   padding: 7.5px;
   border: none;
@@ -927,7 +930,26 @@ body {
     height: 20px;
     width: 20px;
     border: 1px solid #402b2b;
-    margin-right: 10px; }
+    margin-right: 10px;
+    -webkit-appearance: none;
+    background-color: #f4f8f7;
+    border: 2px solid #c8c8c8;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 9px;
+    display: inline-block;
+    position: relative; }
+    .form__input-checkbox:checked {
+      background-color: #0055a7; }
+      .form__input-checkbox:checked:after {
+        left: 9px;
+        top: 5px;
+        width: 5px;
+        height: 10px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg); }
 
 @media screen and (max-width: 1024px) {
   .form__group {
@@ -955,6 +977,40 @@ body {
     align-items: center; }
     .tab__buttons .btn:first-child {
       margin-right: 10px; }
+
+.control {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  font-size: 16px; }
+  .control input {
+    position: absolute;
+    z-index: -1;
+    opacity: 0; }
+    .control input:checked ~ .control__indicator {
+      background-color: #0055a7; }
+    .control input:checked ~ .control__indicator:after {
+      display: block; }
+  .control__indicator {
+    position: absolute;
+    top: 9px;
+    left: 0;
+    height: 22px;
+    width: 22px;
+    background: #f4f8f7; }
+    .control__indicator:after {
+      content: "";
+      position: absolute;
+      display: none;
+      left: 8px;
+      top: 4px;
+      width: 3px;
+      height: 8px;
+      border: solid #fff;
+      border-width: 0 2px 2px 0;
+      transform: rotate(45deg); }
 
 .header__container {
   display: flex;
