--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -20,6 +20,11 @@
             align-items: center;
             width: 370px;
             padding: 10px 15px;
+
+            .checkbox {
+                &__container {
+                }
+            }
         }
 
         &-sm {
@@ -31,6 +36,9 @@
         .show__password {
             cursor: pointer;
         }
+    }
+    &__label {
+        margin-right: 2px;
     }
 
     &__input {
@@ -65,6 +73,29 @@
             width: 20px;
             border: 1px solid $color-text;
             margin-right: 10px;
+            -webkit-appearance: none;
+            background-color: $color-gray-light;
+            border: 2px solid $color-gray;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05),
+                inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+            padding: 9px;
+            display: inline-block;
+            position: relative;
+
+            &:checked {
+                background-color: $color-primary;
+                &:after {
+                    left: 9px;
+                    top: 5px;
+                    width: 5px;
+                    height: 10px;
+                    border: solid white;
+                    border-width: 0 3px 3px 0;
+                    -webkit-transform: rotate(45deg);
+                    -ms-transform: rotate(45deg);
+                    transform: rotate(45deg);
+                }
+            }
         }
     }
 }
