Adds custom checkbox

--- a/css/style.css
+++ b/css/style.css
@@ -999,7 +999,7 @@ body {
     left: 0;
     height: 22px;
     width: 22px;
-    background: #f4f8f7; }
+    background: #c8c8c8; }
     .control__indicator:after {
       content: "";
       position: absolute;
