--- a/scss/components/_customCheckbox.scss
+++ b/scss/components/_customCheckbox.scss
@@ -25,7 +25,7 @@
         left: 0;
         height: 22px;
         width: 22px;
-        background: $color-gray-light;
+        background: $color-gray;
 
         &:after {
             content: "";
