--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -4,8 +4,12 @@ $color-black: #000000;
 
 $color-text: #402b2b;
 $color-cookie-text: #a09292;
+$color-text-error: #721c24;
+$color-text-warning: #856404;
 
 $color-bg: #fef8f5;
+$color-bg-error: #f8d7da;
+$color-bg-warning: #fff3cd;
 
 $color-gray: #c8c8c8;
 $color-gray-light: #f4f8f7;
