--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -117,6 +117,11 @@
         color: $color-white;
         line-height: 40px;
     }
+    &__validation {
+        font-family: "Rubik";
+        font-size: 16px;
+        font-weight: 300;
+    }
     &__primary {
         font-weight: 300;
         font-size: 16px;
