--- a/scss/base/_utilities.scss
+++ b/scss/base/_utilities.scss
@@ -22,6 +22,9 @@
     &--medium {
         margin-bottom: 20px;
     }
+    &--small {
+        margin-bottom: 10px;
+    }
 }
 .margin {
     &__large {
@@ -66,6 +69,11 @@
     &--1 {
         display: flex;
         justify-content: space-between;
+    }
+    &--2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
