--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -1,4 +1,10 @@
 .card {
+    &__container {
+        box-shadow: 0px 1px 50px 3px rgba($color-black, 0.25);
+        margin: 20px 0 50px 0;
+        background-color: $color-white;
+        padding: 50px 20px;
+    }
     height: 450px;
     display: flex;
     box-shadow: 0px 1px 50px 3px rgba($color-black, 0.25);
