Adds additional pages

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,4 +12,5 @@ $color-bg-error: #f8d7da;
 $color-bg-warning: #fff3cd;
 
 $color-gray: #c8c8c8;
+$color-gray-dark: #333;
 $color-gray-light: #f4f8f7;
