--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./components/form";
 @import "./components/multistep-form";
 @import "./components/customCheckbox";
+@import "./components/list";
 @import "./layout/header";
 @import "./layout/general";
 @import "./layout/footer";
