--- a/css/style.css
+++ b/css/style.css
@@ -471,6 +471,10 @@ body {
   font-weight: 700;
   font-size: 36px;
   color: #0055a7; }
+  .heading__tertiary--1 {
+    color: #ffffff; }
+  .heading__tertiary--2 {
+    color: #333; }
 
 .heading__secondary {
   font-family: "Rubik";
@@ -497,11 +501,15 @@ body {
 
 .text {
   font-family: "Rubik";
-  font-weight: 400; }
+  font-weight: 400;
+  line-height: 1; }
   .text__secondary {
     font-size: 18px;
     color: #ffffff;
     line-height: 40px; }
+    .text__secondary--1 {
+      color: #000000;
+      line-height: 1; }
   .text__validation {
     font-family: "Rubik";
     font-size: 16px;
@@ -547,6 +555,11 @@ body {
   font-family: "Rubik";
   text-decoration: none; }
 
+.form__group-label {
+  font-family: "Rubik";
+  font-size: 16px;
+  color: rgba(64, 43, 43, 0.7); }
+
 .link__primary {
   font-family: "Roboto";
   font-weight: 400;
@@ -569,6 +582,13 @@ body {
   color: #0055a7;
   cursor: pointer;
   text-decoration: underline; }
+
+.blockquote {
+  padding: 10px 20px;
+  border-left: 5px solid #e2e2e2;
+  font-size: 18px;
+  line-height: 22px;
+  font-family: "Rubik"; }
 
 @media screen and (max-width: 1024px) {
   .heading__primary {
@@ -600,6 +620,9 @@ body {
 .align__right {
   text-align: right; }
 
+.align__left {
+  text-align: left; }
+
 .uppercase {
   text-transform: uppercase; }
 
@@ -612,8 +635,26 @@ body {
 .margin__bottom--small {
   margin-bottom: 10px; }
 
+.margin__top-small {
+  margin: 10px; }
+
 .margin__large {
   margin: 40px 0; }
+
+.margin__medium {
+  margin: 20px 0; }
+
+.margin__small {
+  margin: 10px 0; }
+
+.padding__small {
+  padding: 10px; }
+
+.padding__medium {
+  padding: 20px; }
+
+.padding__large {
+  padding: 40px; }
 
 .near__invisible-container {
   position: absolute;
@@ -813,8 +854,39 @@ body {
   .card__container {
     box-shadow: 0px 1px 50px 3px rgba(0, 0, 0, 0.25);
     margin: 20px 0 50px 0;
-    background-color: #ffffff;
-    padding: 50px 20px; }
+    background-color: #ffffff; }
+    .card__container--top {
+      height: 100px;
+      background-color: #0055a7;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+    .card__container--text {
+      text-align: center;
+      padding: 50px; }
+      .card__container--text h4 {
+        margin-bottom: 20px; }
+  .card__job {
+    text-align: center;
+    background-color: #fef8f5;
+    height: 260px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; }
+    .card__job .card__img {
+      position: absolute;
+      top: -30px;
+      height: 50px;
+      width: 50px;
+      background-color: #0055a7;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%; }
+      .card__job .card__img img {
+        height: 30px; }
   .card__content {
     background-color: #0055a7;
     flex: 1;
@@ -899,7 +971,19 @@ body {
   margin-bottom: 20px;
   background-color: #f4f8f7;
   padding: 10px 15px;
-  width: 370px; }
+  width: 370px;
+  position: relative; }
+  .form__group--grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    width: 83%; }
+    .form__group--grid .form__group {
+      width: auto; }
+      .form__group--grid .form__group .form__input {
+        width: 100%; }
+  .form__group-label {
+    position: absolute; }
   .form__group--1 {
     display: flex;
     background-color: #f4f8f7;
@@ -936,6 +1020,8 @@ body {
     width: 230px; }
   .form__input--2 {
     width: 100%; }
+  .form__input-file {
+    opacity: 0; }
   .form__input-select {
     border: none;
     background-color: #f4f8f7;
@@ -1006,7 +1092,9 @@ body {
     width: 150px;
     padding: 5px; }
     .form__input--1 {
-      width: 120px; } }
+      width: 120px; }
+  .form__group--grid {
+    grid-template-columns: 1fr; } }
 
 .tab {
   display: none;
@@ -1051,6 +1139,11 @@ body {
       border: solid #fff;
       border-width: 0 2px 2px 0;
       transform: rotate(45deg); }
+
+.list__primary {
+  list-style-type: disc; }
+  .list__primary-item {
+    margin-left: 15px; }
 
 .header__container {
   display: flex;
@@ -1097,7 +1190,7 @@ body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   -ms-grid-columns: 1fr 1fr;
-  grid-column-gap: 40px; }
+  grid-gap: 40px; }
 
 .grid-of-3 {
   display: -ms-grid;
