--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -3,7 +3,53 @@
         box-shadow: 0px 1px 50px 3px rgba($color-black, 0.25);
         margin: 20px 0 50px 0;
         background-color: $color-white;
-        padding: 50px 20px;
+
+        &--top {
+            height: 100px;
+            background-color: $color-primary;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        &--heading {
+        }
+
+        &--text {
+            text-align: center;
+            padding: 50px;
+
+            h4 {
+                margin-bottom: 20px;
+            }
+        }
+    }
+    &__job {
+        text-align: center;
+        background-color: $color-bg;
+        height: 260px;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        .card__img {
+            position: absolute;
+            top: -30px;
+            height: 50px;
+            width: 50px;
+            background-color: $color-primary;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+
+            img {
+                height: 30px;
+            }
+        }
+        .card__text {
+            // margin-bottom: 20px;
+        }
     }
     height: 450px;
     display: flex;
